--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   modbus-server:
-    image: "modbus-server"
+    image: "hathoute/exprom-modbus-server"
     depends_on:
       - mariadb
     restart: "always"
