Added server config parameters

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -15,5 +15,5 @@ log4j.appender.rollingAppender.encoding=UTF-8
 ## property.
 ##
 log4j.debug=false
-log4j.logger.com.ghgande = INFO, stdoutAppender
-log4j.logger.com.hathoute = INFO, stdoutAppender
+log4j.logger.com.ghgande = DEBUG, stdoutAppender
+log4j.logger.com.hathoute = DEBUG, stdoutAppender
