--- a/src/main/resources/modbus-server.properties
+++ b/src/main/resources/modbus-server.properties
@@ -1,5 +1,9 @@
 # Parsing
-parsing.show_value = true
+debug.show_value = true
+
+# Server port
+server.port = 6651
+server.use_rtu_over_tcp = true
 
 # Database config
 database.user = root
