--- a/src/main/resources/modbus-server.properties
+++ b/src/main/resources/modbus-server.properties
@@ -9,4 +9,5 @@ server.use_rtu_over_tcp = true
 database.user = root
 database.password =
 database.hostname = 127.0.0.1
+database.port = 3306
 database.database_name = modbus_rtu
