--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   modbus-server:
-    image: "hathoute/exprom-modbus-server"
+    image: "laarouchioussama/modbus-server"
     depends_on:
       - mariadb
     restart: "always"
@@ -9,7 +9,7 @@ services:
       - "0.0.0.0:6651:6651/tcp"
     environment:
       - DEBUG_SHOW_VALUE=false
-      - SERVER_PORT=6651    # For a different port, please edit the binding, not this value
+      - SERVER_PORT=6651    
       - SERVER_USE_RTU_OVER_TCP=true
       - DATABASE_USER=user
       - DATABASE_PASSWORD=user_passwd
@@ -18,9 +18,16 @@ services:
   mariadb:
     image: mariadb:10.7
     ports:
-      - "3306:3306"
+      - "0.0.0.0:3306:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=root_passwd
       - MYSQL_PASSWORD=user_passwd
       - MYSQL_USER=user
       - MYSQL_DATABASE=modbus_rtu
+  node-red:
+    image: nodered/node-red
+    depends_on:
+      - mariadb
+    restart: "always"
+    ports:
+      - "0.0.0.0:1880:1880"
