--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,10 @@ services:
     restart: "always"
     ports:
       - "0.0.0.0:1880:1880"
+    networks:
+      - node-red-net
+    volumes:
+      - node-red-data:/data
+
+volumes:
+  node-red-data:
