--- a/src/main/resources/modbus-server.properties
+++ b/src/main/resources/modbus-server.properties
@@ -11,3 +11,4 @@ database.password =
 database.hostname = 127.0.0.1
 database.port = 3306
 database.database_name = modbus_rtu
+database.synchronization_interval = 60
