--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - MYSQL_USER=user
       - MYSQL_DATABASE=modbus_rtu
   grafana:
-    image: grafana/grafana
+    image: laarouchioussama/custom-grafana
     depends_on:
       - mariadb
     restart: unless-stopped
