--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.hathoute</groupId>
     <artifactId>modbus-server</artifactId>
-    <version>2.2.2</version>
+    <version>2.3.0</version>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
@@ -99,6 +99,10 @@
                             <Implemenation-Vendor>${project.organization.name}</Implemenation-Vendor>
                             <Main-Class>com.hathoute.modbus.Main</Main-Class>
                         </manifestEntries>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                        </manifest>
                     </archive>
                 </configuration>
             </plugin>
@@ -127,7 +131,6 @@
                     </execution>
                 </executions>
             </plugin>
-
 
         </plugins>
 
