feat: add halt on critical feature

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,4 +16,4 @@ log4j.appender.rollingAppender.encoding=UTF-8
 ##
 log4j.debug=false
 log4j.logger.com.ghgande = DEBUG, stdoutAppender
-log4j.logger.com.hathoute = DEBUG, stdoutAppender
+log4j.logger.com.hathoute = TRACE, stdoutAppender
