--- a/src/main/resources/modbus-server.properties
+++ b/src/main/resources/modbus-server.properties
@@ -4,6 +4,7 @@ debug.show_value = true
 # Server port
 server.port = 6651
 server.use_rtu_over_tcp = true
+server.shutdown_on_critical = true
 
 # Database config
 database.user = root
