--- a/src/main/resources/modbus-server.properties
+++ b/src/main/resources/modbus-server.properties
@@ -10,5 +10,5 @@ database.user = root
 database.password =
 database.hostname = 127.0.0.1
 database.port = 3306
-database.database_name = modbus_rtu
+database.database_name = test
 database.synchronization_interval = 60
