--- a/src/main/resources/modbus-server.properties
+++ b/src/main/resources/modbus-server.properties
@@ -7,9 +7,9 @@ server.use_rtu_over_tcp = true
 server.shutdown_on_critical = false
 
 # Database config
-database.user = root
-database.password =
+database.user = user
+database.password = user_password
 database.hostname = 127.0.0.1
 database.port = 3306
-database.database_name = modbus_rtu
+database.database_name = DEVELOPMENT
 database.synchronization_interval = 60
